# TCS_GenAI_Hackaton

./: .gitignore  README.md  pyproject.toml
cloud_scripts/: jarvis_labs.txt  prime_intellect.txt
data/: finished_goods_inventory.csv  production_schedule.csv  purchases.csv
data/csv/: bill_of_materials.csv  raw_material_inventory.csv
notebooks/: dataset.ipynb  main.ipynb  prepare_dataset.ipynb
src/: indexeing.py  settings.py  utils.py
